# brain-mri-classification

./: .gitignore  README.md  pyproject.toml
src/cnn_model/: get_data.ipynb  main.ipynb  model_builder.py  train.py  utils_dataset.py  utils_evaluation.py  utils_helper.py  utils_plotting.py
src/cnn_model/config/: config.yml  settings.py
